[gd_scene load_steps=52 format=3 uid="uid://lybotj3vh6v7"]

[ext_resource type="Texture2D" uid="uid://34v2m3edfkgx" path="res://enemy/Skeleton enemy.png" id="1_isreu"]
[ext_resource type="Script" path="res://enemy/skeleton.gd" id="1_v5ttj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qb0lt"]
size = Vector2(44, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4onye"]
atlas = ExtResource("1_isreu")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h352y"]
atlas = ExtResource("1_isreu")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cf845"]
atlas = ExtResource("1_isreu")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0svg4"]
atlas = ExtResource("1_isreu")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l45aj"]
atlas = ExtResource("1_isreu")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0r3y"]
atlas = ExtResource("1_isreu")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7uvwm"]
atlas = ExtResource("1_isreu")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxt33"]
atlas = ExtResource("1_isreu")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_062qp"]
atlas = ExtResource("1_isreu")
region = Rect2(512, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x618d"]
atlas = ExtResource("1_isreu")
region = Rect2(576, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1mc1c"]
atlas = ExtResource("1_isreu")
region = Rect2(640, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_500rm"]
atlas = ExtResource("1_isreu")
region = Rect2(704, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4c7gc"]
atlas = ExtResource("1_isreu")
region = Rect2(768, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhqiu"]
atlas = ExtResource("1_isreu")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujwkl"]
atlas = ExtResource("1_isreu")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d75mr"]
atlas = ExtResource("1_isreu")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqvlc"]
atlas = ExtResource("1_isreu")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_id2ct"]
atlas = ExtResource("1_isreu")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ks3n"]
atlas = ExtResource("1_isreu")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjcrg"]
atlas = ExtResource("1_isreu")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6o3d"]
atlas = ExtResource("1_isreu")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_thbqw"]
atlas = ExtResource("1_isreu")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0va8"]
atlas = ExtResource("1_isreu")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8uiqb"]
atlas = ExtResource("1_isreu")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lr7pi"]
atlas = ExtResource("1_isreu")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gb1pj"]
atlas = ExtResource("1_isreu")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjyl5"]
atlas = ExtResource("1_isreu")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qw1go"]
atlas = ExtResource("1_isreu")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ul7n"]
atlas = ExtResource("1_isreu")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_el6sp"]
atlas = ExtResource("1_isreu")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmp50"]
atlas = ExtResource("1_isreu")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ngb0"]
atlas = ExtResource("1_isreu")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwx1b"]
atlas = ExtResource("1_isreu")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jwak"]
atlas = ExtResource("1_isreu")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6u7y3"]
atlas = ExtResource("1_isreu")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_naimm"]
atlas = ExtResource("1_isreu")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7m7t3"]
atlas = ExtResource("1_isreu")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7a5um"]
atlas = ExtResource("1_isreu")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxymt"]
atlas = ExtResource("1_isreu")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3kj0"]
atlas = ExtResource("1_isreu")
region = Rect2(448, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nlnwb"]
atlas = ExtResource("1_isreu")
region = Rect2(512, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cf6lv"]
atlas = ExtResource("1_isreu")
region = Rect2(576, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lpyg6"]
atlas = ExtResource("1_isreu")
region = Rect2(640, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tpojy"]
atlas = ExtResource("1_isreu")
region = Rect2(704, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_o17jh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4onye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h352y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cf845")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0svg4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l45aj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0r3y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7uvwm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxt33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_062qp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x618d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1mc1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_500rm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4c7gc")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhqiu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujwkl")
}],
"loop": false,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d75mr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqvlc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_id2ct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ks3n")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjcrg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6o3d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_thbqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0va8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8uiqb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lr7pi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gb1pj")
}],
"loop": false,
"name": &"strike",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjyl5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qw1go")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ul7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_el6sp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmp50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ngb0")
}],
"loop": false,
"name": &"strike2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwx1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jwak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6u7y3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_naimm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7m7t3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7a5um")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxymt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3kj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nlnwb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cf6lv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lpyg6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tpojy")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_qfdxx"]
radius = 266.002

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v7847"]
size = Vector2(100, 64)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8v4sy"]
bg_color = Color(0.501961, 0.141176, 0.6, 1)

[node name="skeleton" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_v5ttj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-4, 0)
shape = SubResource("RectangleShape2D_qb0lt")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0.499999, 1.07288e-06)
scale = Vector2(2.17188, 2.03125)
sprite_frames = SubResource("SpriteFrames_o17jh")
animation = &"strike"
autoplay = "idle"
metadata/_edit_lock_ = true

[node name="Area2D (detection)" type="Area2D" parent="."]
collision_layer = 7
collision_mask = 7
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D (detection)"]
shape = SubResource("CircleShape2D_qfdxx")
metadata/_edit_lock_ = true

[node name="Area2D (strike)" type="Area2D" parent="."]
collision_layer = 7
collision_mask = 7
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D (strike)"]
position = Vector2(11, 0)
shape = SubResource("RectangleShape2D_v7847")
metadata/_edit_lock_ = true

[node name="SkeletonBar" type="ProgressBar" parent="."]
offset_left = -61.0
offset_top = -70.0
offset_right = 62.0
offset_bottom = -43.0
theme_override_styles/background = SubResource("StyleBoxFlat_8v4sy")
max_value = 20.0
value = 20.0

[connection signal="body_entered" from="Area2D (detection)" to="." method="_on_area_2d_player_detection_body_entered"]
[connection signal="body_exited" from="Area2D (detection)" to="." method="_on_area_2d_player_detection_body_exited"]
[connection signal="body_entered" from="Area2D (strike)" to="." method="_on_area_2d_strike_body_entered"]
[connection signal="body_exited" from="Area2D (strike)" to="." method="_on_area_2d_strike_body_exited"]
